fix overflow

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -13,8 +13,10 @@ naviHeight = 32px
 html, body
     padding 0
     margin 0
+    position:relative;
     // overscroll-behavior none
     height 100%
+    overflow-x hidden
 
 body
     letter-spacing -1.5px
